--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "express": "^4.18.1",
     "express-validator": "^6.14.2",
     "mongoose": "^6.6.3",
+    "mongoose-unique-validator": "^3.1.0",
     "uuid": "^9.0.0",
     "uuidv4": "^6.2.13"
   },
