--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
 PORT=5000
-MONGO_URI=mongodb+srv://yakirtravish:1581997h@cluster0.dv3kdme.mongodb.net/places?retryWrites=true&w=majority
+MONGO_URI=mongodb+srv://yakirtravish:1581997h@cluster0.dv3kdme.mongodb.net/MERN?retryWrites=true&w=majority
